codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model
  Type to filter models, or press Enter to use a custom model name.

  Filter or enter a custom model
› gpt-5.2 (current)  Optimized for professional work and long-running agents.
  gpt-5.3-codex      Coding-optimized model.
  gpt-5.4            Strong model for everyday coding.
  gpt-5.4-mini       GPT-5.4-Mini - Small, fast, and cost-efficient model for
                     simpler coding tasks.
  gpt-5.5 (default)  GPT-5.5 - Frontier model for complex coding, research,
                     and real-world work.

  Press enter to confirm or esc to go back
